Fixed the cropped image and the youtube video not showing up

--- a/main.css
+++ b/main.css
@@ -223,6 +223,28 @@ footer ul li {
      padding-bottom: 15px;
   }
 
+  .image-container {
+    height: auto;
+  }
+
+  .image-container img {
+    position: relative;
+    top: 0;
+  }
+
+  .youtube-container {
+    position: relative;
+    width: 100%;
+    height: 0;
+    padding-bottom: 56.25%;
+  }
+
+  .youtube-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+
   footer ul li {
     display: block;
   }
